<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blancoSplash"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Actualizar Perfil" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_imagePostuladop"
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:src="@drawable/alumni_logo"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/search_results_txt"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:text="Datos de tu perfil"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/user_txt"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Text_Usuario"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hint="Ingrese un nombre de usuario"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/blueista"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/first_name_txt"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Text_Nombre"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hint="@string/first_name_hint"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/blueista"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/second_name_txt"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Text_NombreSegundo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hint="@string/second_name_hint"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/blueista"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/lastname_txt"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Text_Apellido"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hint="@string/lastname_hint"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/blueista"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/lastname2_txt"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Text_Seg_Apellido"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hint="@string/lastname2_hint"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/blueista"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/phone_number_txt"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Text_Telefono"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:hint="@string/phone_number_hint"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="@color/blueista"
                android:textCursorDrawable="@null"
                android:textSize="15sp" />


            <Button
                android:id="@+id/actualizar_txt"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#7431EF"
                android:text="@string/update"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>