<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_main_incomeexpense"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:id="@+id/layout_incomeexpense"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="Detalle De La Oferta Laboral" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <com.davemorrissey.labs.subscaleview.SubsamplingScaleImageView
                    android:id="@+id/empresaImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title1TL"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="15sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="10sp">

                    <EditText
                        android:id="@+id/empresaNombre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/empresa_name"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textColorLink="@color/azulinicio"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title2TL"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp">

                    <EditText
                        android:id="@+id/ubicacion"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:autofillHints="xd"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/ubicacion"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title3TL"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp">

                    <EditText
                        android:id="@+id/areaConocimiento"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/area"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title4TL"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp">

                    <EditText
                        android:id="@+id/cargo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/cargo"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title5TL"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp">

                    <EditText
                        android:id="@+id/experiencia"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/experiencia"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title6TL"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp">

                    <EditText
                        android:id="@+id/fechaPublicacion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/fecha_publi"
                        android:inputType="date"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title7TL"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp">

                    <EditText
                        android:id="@+id/fechaApertura"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/fecha_aper"
                        android:inputType="date"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title8TL"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp">

                    <EditText
                        android:id="@+id/fechaCierre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/fecha_cierre"
                        android:inputType="date"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title9TL"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp">

                    <EditText
                        android:id="@+id/tiempo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/tiempo"
                        android:inputType="date"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/title10TL"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp">

                    <EditText
                        android:id="@+id/salario"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/salario"
                        android:inputType="text"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textStyle="normal" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnPostular"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:layout_gravity="center"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginBottom="25sp"
                    android:background="@drawable/custom_button_background"
                    android:text="@string/postular"
                    android:textAlignment="center"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
